Update notebook md

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "aa4c49a4",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#🛫-Air-Paradis-🛬\" data-toc-modified-id=\"🛫-Air-Paradis-🛬-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>🛫 Air Paradis 🛬</a></span></li><li><span><a href=\"#Import-des-librairies-et-chargement-des-données\" data-toc-modified-id=\"Import-des-librairies-et-chargement-des-données-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import des librairies et chargement des données</a></span></li><li><span><a href=\"#Selection-des-données\" data-toc-modified-id=\"Selection-des-données-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Selection des données</a></span></li><li><span><a href=\"#Premier-nettoyage\" data-toc-modified-id=\"Premier-nettoyage-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Premier nettoyage</a></span></li><li><span><a href=\"#Preprocessing\" data-toc-modified-id=\"Preprocessing-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Preprocessing</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Preproccessing-general-(regex,-lemmatisation...)\" data-toc-modified-id=\"Preproccessing-general-(regex,-lemmatisation...)-5.0.0.1\"><span class=\"toc-item-num\">5.0.0.1&nbsp;&nbsp;</span>Preproccessing general (regex, lemmatisation...)</a></span></li><li><span><a href=\"#Supprime-les-lettres-seules\" data-toc-modified-id=\"Supprime-les-lettres-seules-5.0.0.2\"><span class=\"toc-item-num\">5.0.0.2&nbsp;&nbsp;</span>Supprime les lettres seules</a></span></li><li><span><a href=\"#Exclusion-des-tweets-ayant-qu'un-seul-mot\" data-toc-modified-id=\"Exclusion-des-tweets-ayant-qu'un-seul-mot-5.0.0.3\"><span class=\"toc-item-num\">5.0.0.3&nbsp;&nbsp;</span>Exclusion des tweets ayant qu'un seul mot</a></span></li><li><span><a href=\"#Suppression-des-doublons\" data-toc-modified-id=\"Suppression-des-doublons-5.0.0.4\"><span class=\"toc-item-num\">5.0.0.4&nbsp;&nbsp;</span>Suppression des doublons</a></span></li><li><span><a href=\"#Suppression-des-tweets-non-anglais\" data-toc-modified-id=\"Suppression-des-tweets-non-anglais-5.0.0.5\"><span class=\"toc-item-num\">5.0.0.5&nbsp;&nbsp;</span>Suppression des tweets non anglais</a></span></li><li><span><a href=\"#Equilibrage-de-la-target\" data-toc-modified-id=\"Equilibrage-de-la-target-5.0.0.6\"><span class=\"toc-item-num\">5.0.0.6&nbsp;&nbsp;</span>Equilibrage de la target</a></span></li></ul></li></ul></li></ul></li><li><span><a href=\"#Visualisation\" data-toc-modified-id=\"Visualisation-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Visualisation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Wordcloud\" data-toc-modified-id=\"Wordcloud-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Wordcloud</a></span><ul class=\"toc-item\"><li><span><a href=\"#Avec-premier-nettoyage\" data-toc-modified-id=\"Avec-premier-nettoyage-6.1.1\"><span class=\"toc-item-num\">6.1.1&nbsp;&nbsp;</span>Avec premier nettoyage</a></span></li><li><span><a href=\"#Avec-preprocessing\" data-toc-modified-id=\"Avec-preprocessing-6.1.2\"><span class=\"toc-item-num\">6.1.2&nbsp;&nbsp;</span>Avec preprocessing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Tweet-traite\" data-toc-modified-id=\"Tweet-traite-6.1.2.1\"><span class=\"toc-item-num\">6.1.2.1&nbsp;&nbsp;</span>Tweet traite</a></span></li><li><span><a href=\"#Tweet-lemm\" data-toc-modified-id=\"Tweet-lemm-6.1.2.2\"><span class=\"toc-item-num\">6.1.2.2&nbsp;&nbsp;</span>Tweet lemm</a></span></li><li><span><a href=\"#Tweet-stemm\" data-toc-modified-id=\"Tweet-stemm-6.1.2.3\"><span class=\"toc-item-num\">6.1.2.3&nbsp;&nbsp;</span>Tweet stemm</a></span></li></ul></li></ul></li><li><span><a href=\"#Frequence\" data-toc-modified-id=\"Frequence-6.2\"><span class=\"toc-item-num\">6.2&nbsp;&nbsp;</span>Frequence</a></span><ul class=\"toc-item\"><li><span><a href=\"#Avec-premier-nettoyage\" data-toc-modified-id=\"Avec-premier-nettoyage-6.2.1\"><span class=\"toc-item-num\">6.2.1&nbsp;&nbsp;</span>Avec premier nettoyage</a></span></li><li><span><a href=\"#Avec-preprocessing\" data-toc-modified-id=\"Avec-preprocessing-6.2.2\"><span class=\"toc-item-num\">6.2.2&nbsp;&nbsp;</span>Avec preprocessing</a></span><ul class=\"toc-item\"><li><span><a href=\"#Tweet-traite\" data-toc-modified-id=\"Tweet-traite-6.2.2.1\"><span class=\"toc-item-num\">6.2.2.1&nbsp;&nbsp;</span>Tweet traite</a></span></li><li><span><a href=\"#Tweet-lemm\" data-toc-modified-id=\"Tweet-lemm-6.2.2.2\"><span class=\"toc-item-num\">6.2.2.2&nbsp;&nbsp;</span>Tweet lemm</a></span></li><li><span><a href=\"#Tweet-stemm\" data-toc-modified-id=\"Tweet-stemm-6.2.2.3\"><span class=\"toc-item-num\">6.2.2.3&nbsp;&nbsp;</span>Tweet stemm</a></span></li></ul></li></ul></li></ul></li><li><span><a href=\"#Export-de-la-dataframe\" data-toc-modified-id=\"Export-de-la-dataframe-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Export de la dataframe</a></span></li><li><span><a href=\"#Conclusion-🎓\" data-toc-modified-id=\"Conclusion-🎓-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Conclusion 🎓</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4b0d38d",
    "metadata": {},
    "source": [
@@ -13,11 +24,13 @@
    "id": "a62670b0",
    "metadata": {},
    "source": [
-    "**Air Paradis** est une compagnie aérienne qui souhaite utiliser l'IA (*Intelligence Artificielle*) pour **détecter les Bad Buzz associés à sa marque** dans les tweets publics en ligne.\n",
+    "# 🛫 Air Paradis 🛬\n",
     "\n",
-    "**En tant qu'ingénieur AI pour Marketing Intelligence Consulting**, nous allons nous plonger dans les techniques de **NLP** (*Natural Language Processing*) pour servir l'objectif d'Air Paradis.\n",
+    "Air Paradis est une compagnie aérienne qui souhaite utiliser l'IA pour **détecter les Bad Buzz associés à sa marque** dans les tweets publics en ligne. 🐦\n",
     "\n",
-    "En effet, le NLP permet à une machine de **comprendre et de traiter le langage humain**. Il nous aidera à résoudre cet **objectif de classification de texte** et à **détecter le sentiment** (positif ou négatif) de ces tweets."
+    "👩‍💼 En tant qu'ingénieur AI, nous allons nous plonger dans les techniques de **NLP** (*Natural Language Processing*) pour servir l'objectif d'Air Paradis. 🎯\n",
+    "\n",
+    "En effet, le NLP permet à une machine de **comprendre et de traiter le langage humain**. 🤖💬 Il nous aidera à résoudre cet **objectif de classification de texte** et à **détecter le sentiment** (positif ou négatif) de ces tweets. 😃😞"
    ]
   },
   {
@@ -65,26 +78,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cdbaf3a",
+   "id": "802587ae",
    "metadata": {},
    "source": [
-    "Le projet ne fournit pas de donnée nous allons donc en récupéré via ce lien https://www.kaggle.com/datasets/kazanova/sentiment140.\n",
+    "Le projet ne fournit pas de données, nous allons donc les récupérer à partir de ce [lien](https://www.kaggle.com/datasets/kazanova/sentiment140). 📦\n",
     "\n",
-    "- convertir la chaîne PDT (fuseau horaire US/Pacifique).\n",
+    "Nous allons effectuer les actions suivantes :\n",
+    "\n",
+    "- Convertir la chaîne PDT (fuseau horaire US/Pacifique). ⏰\n",
     "\n",
     "Voici les différentes colonnes de notre ressource :\n",
     "\n",
-    "- **target**: la polarité du tweet (0 = négatif, 2 = neutre, 4 = positif. Mais nous n'avons pas de sentiment = 2 dans notre jeu de données)\n",
+    "- **target**: la polarité du tweet (0 = négatif, 2 = neutre, 4 = positif). Toutefois, dans notre jeu de données, nous n'avons pas de sentiment égal à 2. 📊\n",
     "\n",
-    "- **ids**: l'identifiant du tweet\n",
+    "- **ids**: l'identifiant du tweet. 🔢\n",
     "\n",
-    "- **date**: la date du tweet\n",
+    "- **date**: la date du tweet. 📅\n",
     "\n",
-    "- **flag**: la requête. S'il n'y a pas de requête, cette valeur est NO_QUERY.\n",
+    "- **flag**: la requête. Si aucune requête n'est présente, cette valeur est NO_QUERY. 🚩\n",
     "\n",
-    "- **user**: l'utilisateur qui a tweeté\n",
+    "- **user**: l'utilisateur qui a tweeté. 👤\n",
     "\n",
-    "- **text**: le texte du tweet"
+    "- **text**: le texte du tweet. 📝"
    ]
   },
   {
@@ -189,16 +204,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa542d08",
+   "id": "12a0d8f4",
    "metadata": {},
    "source": [
-    "Les tweets négatifs ont pour valeur \"0\" et \"4\" pour les tweets positifs.\n",
+    "Les tweets négatifs ont pour valeur \"0\" et \"4\" pour les tweets positifs. \n",
     "\n",
     "Remplaçons ces valeurs pour les rendre un peu plus claires :\n",
     "\n",
-    "- 0 pour les tweets négatifs \n",
+    "- 🔻 0 pour les tweets négatifs \n",
     "\n",
-    "- 1 pour les tweets positifs."
+    "- 🔺 1 pour les tweets positifs."
    ]
   },
   {
@@ -454,10 +469,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba59a354",
+   "id": "4c211cb2",
    "metadata": {},
    "source": [
-    "Seuls les doublons sur les tweets sont vraiment importants. Mais nous devons supprimer les doublons de tweet lorsqu'ils appartiennent au même utilisateur, pour ne pas supprimer deux mêmes tweets que deux personnes auraient postés."
+    "Seuls les doublons sur les tweets sont vraiment importants.✨🔁\n",
+    "\n",
+    "💡 L'objectif principal est d'éliminer les tweets en double afin de ne pas fausser nos analyses et de maintenir l'intégrité des données. Il est important de prendre en compte l'identifiant de l'utilisateur lors de la suppression des doublons afin de préserver les tweets distincts émis par différentes personnes."
    ]
   },
   {
@@ -524,38 +541,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f042b36f",
+   "id": "7e28d95a",
    "metadata": {},
    "source": [
-    "Dans cette section, nous allons créer une série de fonctions de prétraitement, pour nettoyer les tweets et les rendre plus lisibles.\n",
+    "Dans cette section, nous allons créer une série de fonctions de prétraitement pour nettoyer les tweets et les rendre plus lisibles. 🧹✨\n",
     "\n",
     "Nous allons effectuer les étapes suivantes :\n",
     "\n",
-    "- Normaliser le texte en minuscules ;\n",
-    "- Corriger certaines fautes d'orthographe que nous avons détectées ;\n",
-    "- Supprimer (ou remplacer) toutes les mentions d'utilisateurs, urls, hyperliens, emails et hashtags ;\n",
-    "- Supprimer (ou remplacer) certains caractères spécifiques ;\n",
-    "- Développer toutes les contractions anglaises pour conserver le sens et notamment le mot \" not \" qui pourrait être essentiel pour détecter un sentiment négatif ;\n",
-    "- Supprimer les chiffres et les caractères spéciaux ;\n",
-    "- Supprimer les ponctuations ;\n",
-    "- Supprimer les espaces blancs.\n",
-    "- La lemmatisation "
+    "- Normaliser le texte en minuscules. 🔠\n",
+    "- Corriger certaines fautes d'orthographe que nous avons détectées. ✏️\n",
+    "- Supprimer (ou remplacer) toutes les mentions d'utilisateurs, les URLs, les hyperliens, les emails et les hashtags. 🚫👤🔗📧🔖\n",
+    "- Supprimer (ou remplacer) certains caractères spécifiques. ❌✒️\n",
+    "- Développer toutes les contractions anglaises pour conserver le sens, notamment le mot \"not\" qui pourrait être essentiel pour détecter un sentiment négatif. ➡️📖\n",
+    "- Supprimer les chiffres et les caractères spéciaux. 🔢❌\n",
+    "- Supprimer la ponctuation. 🎯\n",
+    "- Supprimer les espaces blancs. ⬜️\n",
+    "- Effectuer la lemmatisation. 📚\n",
+    "\n",
+    "En réalisant ces étapes de prétraitement, nous améliorons la lisibilité des tweets, facilitant ainsi les analyses ultérieures et l'extraction d'informations importantes."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d1d3378",
+   "id": "f9ab9d26",
    "metadata": {},
    "source": [
-    "Concernant les stopswords.\n",
+    "Concernant les stopwords. 🛑🔠\n",
     "\n",
-    "Nous pouvons penser que comme les stopswords (ex.: the, a, of, ...) sont très couramment utilisés en anglais et que par conséquent, ils n'ont aucune signification contextuelle et doivent être supprimés. \n",
+    "Nous pourrions penser que les stopwords (par exemple : the, a, of, ...) sont très couramment utilisés en anglais et qu'ils n'ont donc aucune signification contextuelle, ce qui justifierait de les supprimer. \n",
     "\n",
-    "Mais pour l'analyse des sentiments, il est préférable de conserver tous les mots.\n",
+    "Cependant, dans le cas de l'analyse des sentiments, il est préférable de conserver tous les mots. 🤔✅\n",
     "\n",
-    "Un exemple pourrait être la phrase suivante : “I told you that she was not happy” (\"Je vous ai dit qu'elle n'était pas heureuse\"). Si nous supprimons les stopwords, cela donnerait [‘told’, ‘happy’] (['dit', 'heureuse']) qui sera détecté comme un sentiment positif.\n",
+    "Prenons l'exemple de la phrase suivante : \"I told you that she was not happy\" (\"Je vous ai dit qu'elle n'était pas heureuse\"). Si nous supprimons les stopwords, cela donnerait [‘told’, ‘happy’] (['dit', 'heureuse']), ce qui pourrait être interprété comme un sentiment positif, alors que le sens réel de la phrase est négatif.\n",
     "\n",
-    "Pour plus d'infos : https://medium.com/@limavallantin/why-is-removing-stop-words-not-always-a-good-idea-c8d35bd77214"
+    "Pour plus d'informations sur ce sujet, vous pouvez consulter cet article intéressant : [Why is Removing Stop Words Not Always a Good Idea?](https://medium.com/@limavallantin/why-is-removing-stop-words-not-always-a-good-idea-c8d35bd77214) 📖🔍"
    ]
   },
   {
@@ -3776,31 +3795,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e601aa55",
+   "id": "8f6b9ef4",
    "metadata": {},
    "source": [
-    "# Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68b32e43",
-   "metadata": {},
-   "source": [
-    "Nous avons maintenant nettoyer nos tweets, ils sont prêt pour notre prochain algorithme de machine learning.\n",
+    "# Conclusion 🎓\n",
     "\n",
-    "Nous aurions pu amméliorer notre traitement sur plusieurs points :\n",
+    "Félicitations, nous avons accompli beaucoup ! 🎉 Nos tweets sont désormais propres et prêts pour notre prochaine aventure d'apprentissage automatique ! 🧹🐦\n",
     "\n",
-    "- **Corrigé l'orthographe** :\n",
-    "    - Nous avons essayé deux librairie pour cela, **Textblob** et **Pyspellchecker**. Mais le traitement s'est vu être très très long, voir même faisait planter le notebook.\n",
-    "    \n",
-    "- **En traduisant les tweet non anglais**:\n",
-    "    - Nous avions peur de la qualité que pourrait avoir une traduction, et du coup, donner un faux sens à la phrase et fausser ensuite notre résultat.\n",
-    "    \n",
-    "- **En supprimant les noms et prénoms**:\n",
-    "    - Mais nous n'avons pas trouvé de résultat convacant, en générale, la librairie ne fait que supprimer les mots avec la première lettre en majuscule.\n",
-    "    \n",
-    "Le nettoyage de tweet a été fait à la main, mais il existe une librairie python qui permet de nettoyer des tweets automatiquement."
+    "Cependant, il y a toujours des façons de peaufiner notre processus. Voici quelques points d'amélioration que nous pourrions envisager pour la prochaine fois:\n",
+    "\n",
+    "- 📚 **Correction de l'orthographe**:\n",
+    "    - Nous avons expérimenté avec deux bibliothèques, **Textblob** et **Pyspellchecker**. Malheureusement, le processus s'est avéré extrêmement long et a même causé des problèmes avec notre notebook. Peut-être pourrions-nous chercher des alternatives plus performantes à l'avenir.\n",
+    "\n",
+    "- 🌍 **Traduction des tweets non anglais**:\n",
+    "    - La question de la qualité de la traduction nous a préoccupés. Nous craignions qu'une mauvaise traduction ne donne une fausse interprétation du tweet et ne biaise ainsi nos résultats. Pourtant, l'utilisation d'un service de traduction plus précis pourrait être envisagée pour améliorer cette partie !\n",
+    "- 🕵️‍♀️ **Suppression des noms et prénoms**:\n",
+    "    - Nous n'avons pas trouvé de solution satisfaisante à ce problème. Généralement, les bibliothèques ne font que supprimer les mots dont la première lettre est en majuscule, ce qui n'est pas suffisant. Peut-être qu'une approche utilisant des modèles d'entité nommée pourrait aider !\n",
+    "\n",
+    "Notre nettoyage de tweets a été un travail manuel, ce qui montre l'importance de l'intervention humaine dans le processus de préparation des données. Néanmoins, il existe des bibliothèques Python qui peuvent nettoyer automatiquement les tweets, ce qui pourrait être une option à explorer à l'avenir !\n",
+    "\n",
+    "Passons dans le prochain notebook et regardons ce que nos modèles d'apprentissage automatique vont découvrir avec ces données nettoyées ! 🚀"
    ]
   }
  ],
@@ -3830,7 +3844,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
@@ -3839,6 +3853,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
