--- a/modele_avance.ipynb
+++ b/modele_avance.ipynb
@@ -2,6 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "77c24381",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction-:-Modèle-Avancé-de-Traitement-du-Langage-Naturel-(NLP)-🧠💬\" data-toc-modified-id=\"Introduction-:-Modèle-Avancé-de-Traitement-du-Langage-Naturel-(NLP)-🧠💬-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction : Modèle Avancé de Traitement du Langage Naturel (NLP) 🧠💬</a></span></li><li><span><a href=\"#Modèles-RNN\" data-toc-modified-id=\"Modèles-RNN-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Modèles RNN</a></span></li><li><span><a href=\"#Import-des-librairies\" data-toc-modified-id=\"Import-des-librairies-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Import des librairies</a></span></li><li><span><a href=\"#Import-des-données\" data-toc-modified-id=\"Import-des-données-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Import des données</a></span></li><li><span><a href=\"#Word-embedding\" data-toc-modified-id=\"Word-embedding-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Word embedding</a></span><ul class=\"toc-item\"><li><span><a href=\"#Word2Vec\" data-toc-modified-id=\"Word2Vec-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Word2Vec</a></span></li><li><span><a href=\"#Glov\" data-toc-modified-id=\"Glov-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>Glov</a></span></li></ul></li><li><span><a href=\"#Modèle-|-Word2Vec\" data-toc-modified-id=\"Modèle-|-Word2Vec-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Modèle | Word2Vec</a></span><ul class=\"toc-item\"><li><span><a href=\"#Modèle-avancé\" data-toc-modified-id=\"Modèle-avancé-6.1\"><span class=\"toc-item-num\">6.1&nbsp;&nbsp;</span>Modèle avancé</a></span><ul class=\"toc-item\"><li><span><a href=\"#Fonction-LSTM-et-Confusion-Matrix\" data-toc-modified-id=\"Fonction-LSTM-et-Confusion-Matrix-6.1.1\"><span class=\"toc-item-num\">6.1.1&nbsp;&nbsp;</span>Fonction LSTM et Confusion Matrix</a></span></li><li><span><a href=\"#Avec-tweet-brut\" data-toc-modified-id=\"Avec-tweet-brut-6.1.2\"><span class=\"toc-item-num\">6.1.2&nbsp;&nbsp;</span>Avec tweet brut</a></span></li><li><span><a href=\"#Avec-tweet-traite\" data-toc-modified-id=\"Avec-tweet-traite-6.1.3\"><span class=\"toc-item-num\">6.1.3&nbsp;&nbsp;</span>Avec tweet traite</a></span></li><li><span><a href=\"#Avec-tweet-stemm\" data-toc-modified-id=\"Avec-tweet-stemm-6.1.4\"><span class=\"toc-item-num\">6.1.4&nbsp;&nbsp;</span>Avec tweet stemm</a></span></li><li><span><a href=\"#Avec-tweet-lemm\" data-toc-modified-id=\"Avec-tweet-lemm-6.1.5\"><span class=\"toc-item-num\">6.1.5&nbsp;&nbsp;</span>Avec tweet lemm</a></span></li></ul></li></ul></li><li><span><a href=\"#Modèle-|-Glov\" data-toc-modified-id=\"Modèle-|-Glov-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Modèle | Glov</a></span><ul class=\"toc-item\"><li><span><a href=\"#Modèle-avancé\" data-toc-modified-id=\"Modèle-avancé-7.1\"><span class=\"toc-item-num\">7.1&nbsp;&nbsp;</span>Modèle avancé</a></span><ul class=\"toc-item\"><li><span><a href=\"#Avec-tweet-brut\" data-toc-modified-id=\"Avec-tweet-brut-7.1.1\"><span class=\"toc-item-num\">7.1.1&nbsp;&nbsp;</span>Avec tweet brut</a></span></li><li><span><a href=\"#Avec-tweet-traite\" data-toc-modified-id=\"Avec-tweet-traite-7.1.2\"><span class=\"toc-item-num\">7.1.2&nbsp;&nbsp;</span>Avec tweet traite</a></span></li><li><span><a href=\"#Avec-tweet-stemm\" data-toc-modified-id=\"Avec-tweet-stemm-7.1.3\"><span class=\"toc-item-num\">7.1.3&nbsp;&nbsp;</span>Avec tweet stemm</a></span></li><li><span><a href=\"#Avec-tweet-lemm\" data-toc-modified-id=\"Avec-tweet-lemm-7.1.4\"><span class=\"toc-item-num\">7.1.4&nbsp;&nbsp;</span>Avec tweet lemm</a></span></li></ul></li></ul></li><li><span><a href=\"#BERT\" data-toc-modified-id=\"BERT-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>BERT</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Avec-tweet-brut\" data-toc-modified-id=\"Avec-tweet-brut-8.0.1\"><span class=\"toc-item-num\">8.0.1&nbsp;&nbsp;</span>Avec tweet brut</a></span></li><li><span><a href=\"#Avec-tweet-traite\" data-toc-modified-id=\"Avec-tweet-traite-8.0.2\"><span class=\"toc-item-num\">8.0.2&nbsp;&nbsp;</span>Avec tweet traite</a></span></li><li><span><a href=\"#Avec-tweet-stemm\" data-toc-modified-id=\"Avec-tweet-stemm-8.0.3\"><span class=\"toc-item-num\">8.0.3&nbsp;&nbsp;</span>Avec tweet stemm</a></span></li><li><span><a href=\"#Avec-tweet-lemm\" data-toc-modified-id=\"Avec-tweet-lemm-8.0.4\"><span class=\"toc-item-num\">8.0.4&nbsp;&nbsp;</span>Avec tweet lemm</a></span></li></ul></li></ul></li><li><span><a href=\"#Comparatif\" data-toc-modified-id=\"Comparatif-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Comparatif</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>Conclusion</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44e2126",
+   "metadata": {},
+   "source": [
+    "# Introduction : Modèle Avancé de Traitement du Langage Naturel (NLP) 🧠💬\n",
+    "\n",
+    "Bienvenue dans ce notebook, qui est la suite de l'EDA et Modèle de base.\n",
+    "\n",
+    "Nous commençons par importer un ensemble massif de bibliothèques pour nous aider dans cette tâche, y compris des bibliothèques populaires telles que Pandas, Numpy, Keras, TensorFlow, et bien d'autres. Ne vous inquiétez pas si vous ne connaissez pas toutes ces bibliothèques, vous apprendrez à les connaître au fur et à mesure que vous vous plongerez dans le notebook.📚🔍\n",
+    "\n",
+    "Après avoir importé nos bibliothèques, nous chargeons notre dataset, qui est une collection de tweets prétraités et étiquetés avec des sentiments (0 pour négatif, 1 pour positif). Nous avons une grande quantité de données à explorer ici, mais pour ce notebook, nous allons travailler avec un échantillon de 1500 tweets pour chaque sentiment. 📊🔢\n",
+    "\n",
+    "Une fois que nous avons nos données, nous entrons dans le vif du sujet avec le deep learning, en commençant par le \"Word Embedding\". Cette technique incroyable représente les mots comme des vecteurs dans un espace vectoriel. Les mots avec des significations similaires ont des représentations similaires, ce qui nous permet de capturer des relations sémantiques complexes entre les mots. C'est l'une des grandes avancées du Deep Learning dans le domaine du NLP. 🗣️🏹\n",
+    "\n",
+    "Un type particulier de Word Embedding que nous utilisons dans ce notebook est Word2Vec, développé par Google. Word2Vec utilise des réseaux neuronaux pour apprendre les représentations vectorielles des mots d'une manière non supervisée. Par rapport à d'autres méthodes, Word2Vec est particulièrement avantageux pour les grands ensembles de données. 🌐🤖\n",
+    "\n",
+    "Notre voyage dans ce notebook ne fait que commencer. Nous avons encore beaucoup à explorer, y compris les réseaux de neurones récurrents (RNN), les modèles de séquence à séquence, et plus encore. Accrochez-vous, car nous sommes sur le point de plonger dans le monde captivant du NLP avec l'IA ! 🚀🌌"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3f1734a",
    "metadata": {},
    "source": [
@@ -4308,25 +4339,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98274a91",
+   "id": "1106086e",
    "metadata": {},
    "source": [
-    "# Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7001b58d",
-   "metadata": {},
-   "source": [
-    "Nous avons maintenant terminé notre notebook sur le modèle avancé qui a été très intéressant.\n",
+    "# Conclusion\n",
     "\n",
-    "Nous retenons que le modèle le plus efficace (par rapport à la quantité de données que nous avons utilisées) est le modèle **GLOVE | LSTM | tweet traite**.\n",
+    "🎉 Nous avons maintenant terminé notre notebook sur le modèle avancé ! 🚀\n",
     "\n",
-    "En ce qui concerne le modèle BERT, il n'est pas un modèle que nous devons retenir, en tout cas, sur cette quantité de données. Notre intuition sur la force du modèle BERT qui est en rapport avec la quantité de données et confirmé sur cet article:\n",
-    "https://arxiv.org/abs/2009.05451\n",
+    "💡 Au cours de ce projet, nous avons exploré différentes approches de modélisation de données textuelles pour l'analyse de sentiments sur des tweets. Après avoir effectué des prétraitements tels que le nettoyage des données, la suppression des stop words et la lemmatisation, nous avons entraîné plusieurs modèles pour évaluer leur performance.\n",
     "\n",
-    "Nous avons maintenant un modèle fonctionnel implémenté dans une application Flask et déployé sur Heroku à cette adresse : https://heroku-p7.herokuapp.com/."
+    "✨ Parmi les modèles que nous avons testés, le modèle qui s'est révélé le plus efficace en termes de précision et de rappel est le modèle **GLOVE | LSTM | tweet traite**. Il a réussi à capturer les informations contextuelles et séquentielles dans les tweets, ce qui a amélioré la qualité des prédictions.\n",
+    "\n",
+    "❌ D'un autre côté, le modèle BERT n'a pas donné de bons résultats sur la quantité de données que nous avons utilisée. Nous avons découvert que les performances du modèle BERT sont généralement liées à la quantité de données d'entraînement. Vous pouvez consulter l'article suivant pour plus d'informations à ce sujet : [Article sur les performances de BERT](https://arxiv.org/abs/2009.05451).\n",
+    "\n",
+    "📚 Il est important de noter que ce notebook est un point de départ pour l'analyse de sentiments sur des tweets. Il existe de nombreuses autres techniques et modèles que vous pouvez explorer pour améliorer davantage les performances et l'efficacité de votre modèle.\n",
+    "\n",
+    "✅ En conclusion, nous avons acquis une expérience précieuse dans le domaine de l'analyse de sentiments sur les médias sociaux et nous sommes prêts à poursuivre nos projets de traitement du langage naturel !\n",
+    "\n",
+    "🚀 Vous retrouver le dépôt de l'application ici : [App](https://github.com/reda76/air-paradis-NLP-flask).\n",
+    "\n",
+    "🙌 Merci d'avoir suivi ce notebook jusqu'à la fin, et n'oubliez pas de continuer à explorer et à apprendre de nouvelles techniques pour rester à jour dans le domaine de l'IA et du NLP !"
    ]
   }
  ],
@@ -4356,7 +4388,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
@@ -4365,6 +4397,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
