--- a/modele_base.ipynb
+++ b/modele_base.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "42d57f41",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Bienvenue-dans-le-Notebook-Modèle-de-Base-!-🚀\" data-toc-modified-id=\"Bienvenue-dans-le-Notebook-Modèle-de-Base-!-🚀-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Bienvenue dans le Notebook Modèle de Base ! 🚀</a></span></li><li><span><a href=\"#Import-des-librairies\" data-toc-modified-id=\"Import-des-librairies-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import des librairies</a></span></li><li><span><a href=\"#Import-de-la-data\" data-toc-modified-id=\"Import-de-la-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Import de la data</a></span></li><li><span><a href=\"#Analyse-sentiment\" data-toc-modified-id=\"Analyse-sentiment-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Analyse sentiment</a></span><ul class=\"toc-item\"><li><span><a href=\"#Modèle-pré-entrainé\" data-toc-modified-id=\"Modèle-pré-entrainé-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Modèle pré-entrainé</a></span><ul class=\"toc-item\"><li><span><a href=\"#TextBlob\" data-toc-modified-id=\"TextBlob-4.1.1\"><span class=\"toc-item-num\">4.1.1&nbsp;&nbsp;</span>TextBlob</a></span><ul class=\"toc-item\"><li><span><a href=\"#Matrice-de-confusion\" data-toc-modified-id=\"Matrice-de-confusion-4.1.1.1\"><span class=\"toc-item-num\">4.1.1.1&nbsp;&nbsp;</span>Matrice de confusion</a></span></li></ul></li><li><span><a href=\"#Afinn\" data-toc-modified-id=\"Afinn-4.1.2\"><span class=\"toc-item-num\">4.1.2&nbsp;&nbsp;</span>Afinn</a></span><ul class=\"toc-item\"><li><span><a href=\"#Matrice-de-confusion\" data-toc-modified-id=\"Matrice-de-confusion-4.1.2.1\"><span class=\"toc-item-num\">4.1.2.1&nbsp;&nbsp;</span>Matrice de confusion</a></span></li></ul></li></ul></li><li><span><a href=\"#Régression-logistique\" data-toc-modified-id=\"Régression-logistique-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Régression logistique</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53530c5e",
    "metadata": {},
    "source": [
-    "Nous allons, dans ce notebook, réaliser un modèle de base que nous comparerons avec un modèle plus avancé."
+    "# Bienvenue dans le Notebook Modèle de Base ! 🚀\n",
+    "\n",
+    "Ce notebook est la suite du notebook EDA, nous allons construire un modèle de base que nous comparerons par la suite avec un modèle plus avancé. Ce travail vise à découvrir les principes de base du traitement du langage naturel (NLP) en utilisant Python et certaines de ses bibliothèques les plus populaires. Aucune expérience préalable en NLP n'est requise, nous allons tout parcourir ensemble, étape par étape ! 😄\n",
+    "\n",
+    "Pour commencer, rappelons-nous le processus de nettoyage qui a été appliqué à chaque tweet dans ce dataset :\n",
+    "* `tweet` : Il s'agit des tweets bruts, tels qu'ils ont été postés par les utilisateurs.\n",
+    "* `tweet_traite` : Ces tweets ont été nettoyés en général (contractions, abréviations, ponctuations, etc.).\n",
+    "* `tweet_stemm` : Ce sont les tweets nettoyés qui ont ensuite été racinisés.\n",
+    "* `tweet_lemm` : Ce sont les tweets nettoyés qui ont ensuite été lemmatisés.\n",
+    "\n",
+    "Dans ce notebook, nous utiliserons un module NLP Python appelé TextBlob pour l'analyse de sentiment. TextBlob peut nous aider à déterminer le ton du texte et le sentiment de l'utilisateur. Par exemple, il peut nous dire si un tweet exprime un sentiment positif ou négatif. 💬\n",
+    "\n",
+    "Pour donner un aperçu, TextBlob fournit une mesure de polarité qui va d'une déclaration négative (-1) à une déclaration positive (1). Il fournit également une mesure de subjectivité qui indique dans quelle mesure la phrase est factuelle (0) ou exprime une opinion (1).\n",
+    "\n",
+    "Nous utiliserons TextBlob pour chaque tweet (nettoyé, racinisé et lemmatisé) et comparerons ensuite la qualité de la prédiction en fonction du type de tweet. 📊\n",
+    "\n",
+    "La même chose avec Afinn et la Régression Logistique !\n",
+    "\n",
+    "Allez, c'est parti ! 🎉"
    ]
   },
   {
@@ -417,30 +446,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f2c0965",
+   "id": "c3b66975",
    "metadata": {},
    "source": [
-    "**La polarité** va d'une déclaration **négative (-1)** à une déclaration **positive (1)**.\n",
+    "TextBlob a correctement détecté le sentiment des tweets, mais nous n'aborderons pas la subjectivité dans le cadre de ce projet. 👍📊\n",
     "\n",
-    "**La subjectivité**, indique dans quelle mesure la phrase est **factuelle (0)** ou empreinte **une opinion (1)**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e17315bd",
-   "metadata": {},
-   "source": [
-    "TextBlob a bien détecté le sentiment du tweet, nous passerons sur sa subjectivité qui n'est pas le sujet de ce projet."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23e13bcd",
-   "metadata": {},
-   "source": [
-    "Nous allons maintenant utiliser Textblob pour chaque tweet (traités, lemm et stemm).\n",
+    "Nous allons maintenant utiliser TextBlob pour analyser chaque tweet après les étapes de traitement, lemmatisation et racinisation (stemming). 🧪📝\n",
     "\n",
-    "Puis nous pourrons ensuite comparer la qualité de la prédiction en fonction du type de tweet."
+    "Ensuite, nous pourrons comparer la qualité des prédictions en fonction du type de tweet. 🔎🔄\n",
+    "\n",
+    "Cela nous permettra de déterminer si les étapes de prétraitement et les techniques de transformation du texte ont un impact significatif sur la précision des prédictions de sentiment."
    ]
   },
   {
@@ -816,12 +831,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "730eba4c",
+   "id": "716a24d5",
    "metadata": {},
    "source": [
-    "Voyons maintenant la matrice de confusion pour chaque colonne, nous pourrons alors déterminer quel type de tweet TextBlob prédit le plus correctement le sentiment.\n",
+    "Passons maintenant à l'analyse de la matrice de confusion pour chaque colonne afin de déterminer le type de tweet que TextBlob prédit le plus correctement en termes de sentiment. 📊🔎\n",
     "\n",
-    "Nous utilisons la métrique **f1 score** qui permet de prendre en compte les faux positifs et faux négatifs dans le calcul du score."
+    "Nous utilisons la métrique du **score F1** qui prend en compte à la fois les faux positifs et les faux négatifs lors du calcul du score. 📈✅\n",
+    "\n",
+    "Cela nous permettra d'évaluer la performance de TextBlob pour chaque type de tweet et d'identifier les domaines où il prédit le mieux les sentiments."
    ]
   },
   {
@@ -1077,9 +1094,9 @@
    "id": "0c22825b",
    "metadata": {},
    "source": [
-    "Nous pouvons voir que TextBlob a eu le meilleur score avec la colonne des tweets bruts, pouvons nous penser que moins nous nettoyons un tweet, plus le sentiment est facilement prédictible ?\n",
+    "Nous constatons que TextBlob a obtenu le meilleur score avec la colonne des tweets bruts. Cela soulève la question suivante : est-il possible de penser que moins nous nettoyons un tweet, plus le sentiment est facilement prédictible ? 🤔📊\n",
     "\n",
-    "Voyons voir avec une autre méthode d'analyse de sentiment, **Afinn**."
+    "Pour répondre à cette question, explorons une autre méthode d'analyse de sentiment : **Afinn**. 🔍🔄"
    ]
   },
   {
@@ -1095,15 +1112,7 @@
    "id": "a43854ab",
    "metadata": {},
    "source": [
-    "Le lexique AFINN est une liste de termes anglais dont la version actuelle contient plus de 3 300 mots, chacun étant associé à un score de sentiment que nous pouvons obtenir à l’aide de la méthode **score** de la classe Afinn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30d1742c",
-   "metadata": {},
-   "source": [
-    "Testons comme avec **TextBlob**, la prediction de **Afinn**."
+    "Le lexique AFINN est une liste de termes anglais comprenant plus de 3 300 mots, chacun étant associé à un score de sentiment. Nous pouvons utiliser la méthode **score** de la classe Afinn pour obtenir ces scores de sentiment. 📖📊"
    ]
   },
   {
@@ -1726,20 +1735,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24bed55",
-   "metadata": {},
-   "source": [
-    "Le modèle de prédiction avec **Afinn** donne un score plus élevé."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8f3223d1",
    "metadata": {},
    "source": [
-    "Il est intéressant de voir que pour nos deux modèles, ce sont les tweets bruts sans aucun nettoyage qui ont permis à nos modèles de prédire les sentiments.\n",
+    "Le modèle de prédiction basé sur **Afinn** fournit un score plus élevé en comparaison.\n",
     "\n",
-    "Voyons maintenant ce que nous pouvons obtenir avec un modèle assez basique entrainé par nous même."
+    "Il est intéressant de constater que pour nos deux modèles, ce sont les tweets bruts, sans aucun nettoyage, qui ont permis d'obtenir les meilleures prédictions de sentiment. 📈✅\n",
+    "\n",
+    "Explorons maintenant les possibilités offertes par un modèle basique que nous entraînerons nous-mêmes. 🔍🧪"
    ]
   },
   {
@@ -1752,12 +1755,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "114b19cb",
+   "id": "ae07dbcf",
    "metadata": {},
    "source": [
-    "Commençons à entrainer notre modèle.\n",
+    "Maintenant, passons à l'entraînement de notre modèle de régression logistique. 🏋️‍♀️📈\n",
     "\n",
-    "Importons nos données."
+    "La régression logistique est une technique d'apprentissage supervisé utilisée pour résoudre des problèmes de classification. Dans notre cas, nous l'utiliserons pour prédire la polarité des tweets (positif, neutre ou négatif). 🧪🔍"
    ]
   },
   {
@@ -2413,17 +2416,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c27580",
+   "id": "e21228f9",
    "metadata": {},
    "source": [
-    "Pour le modèle que nous avons entrainé, de manière assez simple, nous avons obtenu un score de ~75% qui est bien supérieur aux modèles préentrainés.\n",
+    "En conclusion, pour notre modèle d'entraînement basique, nous avons obtenu un score d'environ 75%, ce qui est nettement supérieur aux modèles pré-entraînés. 🎉📊\n",
     "\n",
-    "Nous pouvons remarquer également deux choses, le modèle a eu les meilleures prédictions en s'entrainant avec les tweets racinisés.\n",
-    "La deuxième remarque est que cette fois-ci, les tweets bruts se retrouvent en bas du classement.\n",
+    "Nous avons également observé deux choses intéressantes : le modèle a donné les meilleures prédictions lorsqu'il était entraîné avec les tweets racinisés. De plus, les tweets bruts ont donné les résultats les moins performants. 🌱💻\n",
     "\n",
-    "Nous avons effectué une série de tests avec des modèles préentrainés et un modèle entrainé par nous même avec des résultats intéressants.\n",
+    "Nous avons réalisé plusieurs tests avec des modèles pré-entraînés ainsi qu'avec notre propre modèle d'entraînement, obtenant des résultats prometteurs. ✅🔍\n",
     "\n",
-    "Voyons maintenant ce que nous pouvons obtenir comme résultat avec un modèle avancé dans le notebook suivant."
+    "Dans le prochain notebook, nous allons explorer les résultats que nous pouvons obtenir avec un modèle avancé ! 🚀"
    ]
   }
  ],
@@ -2453,7 +2455,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
@@ -2462,6 +2464,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
